AllAllNodesV2_PService.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
