flannel-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flannel-pods
spec:
  ingress:
  - {}
  egress:
  - {}
